--- a/.env.main
+++ b/.env.main
@@ -4,8 +4,8 @@ APP_KEY=base64:rKXF0o3iCtjCskpe2janZCU/kMHhBs5XqZFxCefi6QM=
 APP_DEBUG=false
 APP_URL=http://localhost
 
-LOG_CHANNEL=stderr
-LOG_SLACK_WEBHOOK_URL=
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
 DB_HOST=data-match-db
