--- a/.env.swarm
+++ b/.env.swarm
@@ -7,8 +7,8 @@ APP_URL=http://localhost
 APP_TIMEZONE=Asia/Tehran
 OFFLINE=false
 
-LOG_CHANNEL=stderr
-LOG_SLACK_WEBHOOK_URL=
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
 
 
 DB_CONNECTION=pgsql
